--- a/simplevideocall-tutorial.html
+++ b/simplevideocall-tutorial.html
@@ -51,8 +51,8 @@
     
     const config = {
       credential: {
-        serviceId: '발급 받은 Service Id를 입력',
-        key: '발급 받은 Service Key를 입력'
+        serviceId: '072ae93b-f639-4522-b951-47a6279d6b50',
+        key: 'daac919ac25560b52fd854cece26fedfc1f1b9a53902746b93ecc823b27adbd1'
       },
       view: {
         remote: '#remoteVideo',
